test/test_suite/errors/error_throw.c3
module foo;

fault Z;

fn void main()
{
    int? i = Z?;
    int? j = Z?;
}